--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,11 +3,13 @@
 --page-color: #FFFFFF;
 --cont-alfa-color: rgba(255, 255, 255, 0.6);
 --logo-color: #000000;
+--logo-icon-color:#AFB1B8;
 --grand-color: #212121;
 --indent-color: #757575;
 --style-color: #2196F3;
 --button-hower-color: #188CE8;
 --section-color: #F5F4FA;
+
 
 --main-font: 'Roboto', sans-serif;
 --another-font: 'Raleway', sans-serif;
@@ -215,11 +217,12 @@ img{
 }
 
 .feature-icon-bg{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 120px;
-    padding-top: 25px;
     margin-bottom: 20px;
     
-    text-align: center;
     background-color: var(--section-color);
 }
 
@@ -327,20 +330,39 @@ padding-bottom: 94px;
 .link-icon{
     display: block;
     padding: 12px;
-    color: #AFB1B8;
+    color: var(--logo-icon-color);
 }
 
-.soc-icon {
+.logo-icon {
     display: block;
     fill: currentColor;
 }
 
-.link-icon:hover,
-.link-icon:focus{
-    color: var(--page-color);
-    background-color: var(--style-color);
-    border-radius: 50%;
+
+
+
+/* Стилі секції Постійні клієнти */
+
+
+
+.logo-item:not(:last-child) {
+    margin-right: 30px;
 }
+
+.logo-link {
+    display: block;
+    padding: 15px 31px;
+    color: var(--logo-icon-color);
+    border: 1px solid var(--logo-icon-color);
+    border-radius: 4px;
+}
+
+.logo-link:hover,
+.logo-link:focus {
+    color: var(--style-color);
+    border-color: var(--style-color);
+}
+
 
 /* Стилі Портфоліо */
 
@@ -442,7 +464,6 @@ padding-bottom: 94px;
 .lowerPart{
     padding-top: 60px;
     padding-bottom: 60px;
-
     background-color: #2F303A;
 }
 
@@ -482,4 +503,38 @@ padding-bottom: 94px;
 .contact-list-link:hover,
 .contact-list-link:focus {
     color: var(--style-color)
+}
+
+
+.footer-column{
+    display: flex;
+}
+
+.footer-cont{
+margin-right: 70px;
+}
+
+.footer-soc-icon{
+padding-top: 12px;
+}
+
+.footer-par{
+    margin-bottom: 10px;
+    color: var(--page-color); 
+    font-weight: 700;
+    line-height: 1.14;
+    text-transform: uppercase;
+}
+
+.link-icon.lower{
+    color: var(--page-color);
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+}
+
+.link-icon:hover,
+.link-icon:focus {
+    color: var(--page-color);
+    background-color: var(--style-color);
+    border-radius: 50%;
 }
