--- a/CSS/style.css
+++ b/CSS/style.css
@@ -149,16 +149,17 @@ img{
 .hero{
     
     max-width: 1600px;
-    height: 600px;
     margin-left: auto;
     margin-right: auto;
     padding-top: 200px;
+    padding-bottom: 200px;
     background-color: #C4C4C4;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)),
         url("../images/hero_img.jpg");
     background-position: center;
+    background-size: cover;
     text-align: center;
 }
 
@@ -288,6 +289,7 @@ padding-bottom: 94px;
     margin-top: 30px;
     margin-left: 30px;
 
+    background-color: var(--page-color);
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -297,7 +299,7 @@ padding-bottom: 94px;
 
 .card-name{
     padding-top: 30px;
-    padding-bottom: 30px;   
+    padding-bottom: 30px;
 }
 
 
@@ -508,15 +510,13 @@ padding-bottom: 94px;
 
 .footer-column{
     display: flex;
+    align-items: baseline;
 }
 
 .footer-cont{
 margin-right: 70px;
 }
 
-.footer-soc-icon{
-padding-top: 12px;
-}
 
 .footer-par{
     margin-bottom: 10px;
